--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,10 +12,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.22"
+    "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
+    "pinia": "^3.0.3",
+    "sweetalert2": "^11.26.2",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2"
   }
